chore: build.gradle 수정

--- a/build.gradle
+++ b/build.gradle
@@ -30,13 +30,14 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'com.h2database:h2'
 
-//    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-//    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
 
     testImplementation ('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -45,4 +46,11 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+configurations {
+    all {
+        // log4j2와 Spring 기본 로깅 모듈 logBack과 충돌 방지를 위해 제외
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
